>14/02/2024 Added KeyListener to "Select file" button. Changed Text Area chat output to separated labels for every message. Sending images allows to see the image on chat.
TODO:
Finish settings frame.
Change interface colours.
Add multilanguage.
Add logs.